welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:5: error: not found: value getHauteurMonde
a=getHauteurMonde();
  ^Diagonal:6: error: not found: value getLargeurMonde
b=getLargeurMonde();
  ^