welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
var a=0;
var b=0;
a=getHauteurMonde();
b=getLargeurMonde();
for(i<-0 to b){
	for(j<-0 to a){
		setPos(i, j-i);
	}
}
}
